--- a/components/remote-secret-controller/overlays/development/config-patch.json
+++ b/components/remote-secret-controller/overlays/development/config-patch.json
@@ -2,7 +2,7 @@
   {
     "op": "replace",
     "path": "/data/VAULTHOST",
-    "value": "https://vault-spi-vault.apps-crc.testing"
+    "value": "https://vault-spi-vault.apps.9c2fe7c149b167e3031e.hypershift.aws-2.ci.openshift.org"
   },
   {
     "op": "add",
